Fix navigation link vertical alignment in header
Added line-height: $line-height-heading to nav links to match h1 title
alignment. Previously nav links used body line-height (1.5) while h1
used heading line-height (1.2), causing misalignment despite both
containers using align-items: center.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -65,6 +65,7 @@ nav {
         text-decoration: none !important;
         font-size: 1rem;
         font-weight: 400;
+        line-height: $line-height-heading;
         @include transition(opacity);
         
         &:hover {
